# ContractLens

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
src/contractlens/: __init__.py  llm.py  models.py
src/contractlens/api/: __init__.py  routes.py  schemas.py
src/contractlens/data/: __init__.py  chunker.py  cuad_loader.py
src/contractlens/evaluation/: __init__.py  error_taxonomy.py  evaluator.py  metrics.py
src/contractlens/extraction/: __init__.py  extractor.py  prompts.py
src/contractlens/orchestration/: __init__.py  graph.py  state.py
src/contractlens/retrieval/: __init__.py  chroma_store.py  hybrid_retriever.py  reranker.py
src/contractlens/telemetry/: __init__.py  cost_tracker.py  metrics.py
src/contractlens/verification/: __init__.py  judge.py  verifier.py
tests/: conftest.py
tests/api/: test_routes.py
tests/data/: __init__.py  test_chunker.py
tests/evaluation/: __init__.py  test_evaluator.py
tests/extraction/: __init__.py  test_extractor.py
tests/orchestration/: __init__.py  test_state.py
tests/retrieval/: __init__.py  test_retrieval.py
tests/verification/: __init__.py  test_verifier.py
