[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractlens"
version = "0.1.0"
description = "Evaluation-first contract clause extraction system on the CUAD dataset"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ContractLens Team", email = "team@contractlens.ai"}
]
keywords = ["legal-tech", "contract-analysis", "cuad", "nlp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.8.0",
    
    # LLM & Orchestration
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
    "litellm>=1.0.0",
    
    # Vector Store & Retrieval
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    
    # API & Server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "httpx>=0.25.0",
    
    # Hugging Face (for LoRA stub)
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
    "torch>=2.1.0",
    
    # Data handling
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contractlens"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ASYNC", # flake8-async
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations
]
ignore = [
    "E501",  # line too long (handled by black)
    "FA100", # missing __future__ imports
]

[tool.coverage.run]
source = ["src/contractlens"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]